tests/conformance/typecheck/invalid/non_exhaustive_primitive_literal_match.ks
// EXPECT: Non-exhaustive match
val n = 1
val result = match (n) {
  0 => 10
}
